fix: Center align items in project link layout

--- a/assets/style.css
+++ b/assets/style.css
@@ -325,7 +325,7 @@ a.project:active {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     height: 100%;
     gap:10px;
